examples/errors/parsing/booleans-no-else.cn
main : () [impure] =
  if true then ()
